fix: Drop attachment message not visible

--- a/client/src/components/CardModal/AttachmentAddZone/AttachmentAddZone.module.scss
+++ b/client/src/components/CardModal/AttachmentAddZone/AttachmentAddZone.module.scss
@@ -1,21 +1,27 @@
 :global(#app) {
   .dropzone {
-    color: var(--textColorWhite);
     background: var(--backgroundColorTmpDarkerField2);
+    opacity: 0.7;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 2001;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .dropzoneText {
+    color: var(--textColorWhite);
     font-size: 20px;
     font-weight: 700;
-    height: 100%;
-    line-height: 30px;
-    opacity: 0.7;
-    padding: 200px 50px;
-    position: absolute;
     text-align: center;
-    width: 100%;
-    z-index: 2001;
+    padding: 20px;
   }
 
   .wrapper {
-    overflow: hidden;
+    position: relative;
     width: 100%;
+    height: 100%;
   }
 }
